create gender and name view controllers

--- a/AIApp/Supporting files/Info.plist
+++ b/AIApp/Supporting files/Info.plist
@@ -12,6 +12,7 @@
 		<string>Satoshi-Medium.otf</string>
 		<string>Satoshi-Bold.otf</string>
 		<string>Satoshi-Regular.otf</string>
+		<string>Satoshi-Black.otf</string>
 	</array>
 </dict>
 </plist>
