add register token

--- a/AIApp/Supporting files/Info.plist
+++ b/AIApp/Supporting files/Info.plist
@@ -2,17 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need photos from your library for generate ai avatar</string>
-	<key>UIUserNotificationSettings</key>
-	<dict>
-		<key>types</key>
-		<array>
-			<string>badge</string>
-			<string>sound</string>
-			<string>alert</string>
-		</array>
-	</dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-SemiBold.ttf</string>
@@ -25,5 +14,19 @@
 		<string>Satoshi-Regular.otf</string>
 		<string>Satoshi-Black.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
+	<key>UIUserNotificationSettings</key>
+	<dict>
+		<key>types</key>
+		<array>
+			<string>badge</string>
+			<string>sound</string>
+			<string>alert</string>
+		</array>
+	</dict>
 </dict>
 </plist>
